--- a/gestion3/src/main/resources/application.properties
+++ b/gestion3/src/main/resources/application.properties
@@ -8,6 +8,16 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 server.port=9696
+# application.properties
+# Allowing specific origin
+spring.servlet.multipart.enabled=true
+
+cors.allowed-origins=http://localhost:4200
+cors.allowed-methods=GET,POST,PUT,DELETE
+
+spring.app.expiration=3000
+spring.app.secretkey=azerty1234567891234567890dfbsgrsgrsfgsqgrshsshrbwhbrsr
+
 
 
 
